ParkerStaging/Kube/collector-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: parker-blazor
  name: parker-otel-deployment
  labels:
    app: parker-otel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parker-otel
  template:
    metadata:
      labels:
        app: parker-otel
    spec:
      containers:
      - name: parker-otel
        image: otel/opentelemetry-collector-contrib:0.75.0
        ports:
        - containerPort: 4317
        volumeMounts:
        - name: otel-cofig-volume
          mountPath: /etc/otel-collector-config.yaml
          subPath: otel-collector-config.yml

      volumes:
      - name: otel-config-volume
        configMap:
          name: otel-config
