ParkerStaging/Kube/grafana-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: parker-blazor
  name: parker-grafana-deployment
  labels:
    app: parker-grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parker-grafana
  template:
    metadata:
      labels:
        app: parker-grafana
    spec:
      containers:
      - name: parker-grafana
        image: grafana/grafana:9.4.7
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: grafana-config
          mountPath: /etc/grafana-config.yml
          subPath: grafana-config.yml
        - name: grafana-dashboards
          mountPath: /etc/grafana-dashboards.yml
          subPath: ParkerStaging/grafana/provisioning/dashboards
      volumes:
      - name: grafana-config
        configMap: 
          name: grafana-config
      - name: grafana-dashboards
        configMap:
          name: grafana-dashboards
