ParkerStaging/Kube/loki-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: parker-blazor
  name: parker-loki-deployment
  labels:
    app: parker-loki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parker-loki
  template:
    metadata:
      labels:
        app: parker-loki
    spec:
      containers:
      - name: parker-loki
        image: grafana/loki:2.8.0
        command: [ "-config.file=/etc/loki/local-config.yml" ]
        ports:
        - containerPort: 3100
