ParkerStaging/Kube/grafana-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: parker-blazor
  name: parker-grafana-svc
spec:
  type: ClusterIP
  selector:
    app: parker-grafana
  ports:
    - port: 3000
      targetPort: 3000
