ParkerStaging/Kube/grafana-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: parker-blazor
  name: parker-grafana-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.parker-tickets-kube.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: parker-grafana-svc
            port:
              number: 3000
