ParkerStaging/Kube/web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: parker-blazor
  name: parker-blazor-ingress
  annotations:
    cert-manager.io/cluster-issuer: cert-manager-webhook-duckdns-parker-production
spec:
  tls:
  - hosts:
    - parker-tickets-kube.duckdns.org
    secretName: parker-kube-tls-production
  ingressClassName: nginx
  rules:
  - host: parker-tickets-kube.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: parker-blazor-service
            port:
              number: 80
